--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Todo App</title>
-    <script src="angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
     <script src="app.js"></script>
     <style>
     .strike {
